--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-
-    
+      <h1> saleem saleh <h1/>
     <script src="script.js"></script>
   </body>
 </html>
